style/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --primary-color: #302ae6;
    --secondary-color: #536390;
    --font-color: #424242;
    --bg-color: #fff;
    --heading-color: #292922;
    --paper-texture-light: #f8f5f0;
    --paper-texture-dark: #1e293b;
}

[data-theme="dark"] {
    --primary-color: #9a97f3;
    --secondary-color: #818cab;
    --font-color: #e1e1ff;
    --bg-color: #161625;
    --heading-color: #818cab;
}

/* Paper texture effect using CSS only */
.paper-texture {
    background-image:
        url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 700 700" width="700" height="700" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="fractalNoise" baseFrequency="0.05" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="16" specularConstant="3" specularExponent="20" lighting-color="%23d6ae3d" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="117"></feDistantLight></feSpecularLighting><feColorMatrix type="saturate" values="0" x="0%" y="0%" width="100%" height="100%" in="specularLighting" result="colormatrix"></feColorMatrix></filter></defs><rect width="700" height="700" fill="%23f2f1efff"></rect><rect width="700" height="700" fill="%23d6ae3d" filter="url(%23nnnoise-filter)"></rect></svg>');
    background-size: 400px 400px, 30px 30px, cover, 200px 200px, 200px 200px;
    background-blend-mode: multiply, normal, screen, normal;
}

.theme {
    background-color: var(--bg-color);
    color: var(--font-color);
}

/* The switch - the box around the slider */

.switch {
    position: absolute;
    top: 8px;
    right: 16px;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide default HTML checkbox */

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

input:checked+.slider {
    background-color: #2196f3;
}

input:focus+.slider {
    box-shadow: 0 0 1px #2196f3;
}

input:checked+.slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

@variants hover {
    .scale-normal {
        transition: all 0.2s ease-in-out;
        transform: scale(1);
    }

    .scale-up {
        transition: all 0.2s ease-in-out;
        transform: scale(1.01);
    }
}

.fadeIn-fast {
    opacity: 0;
    -webkit-animation-fill-mode: forwards;
    /* Chrome 16+, Safari 4+ */
    -moz-animation-fill-mode: forwards;
    /* FF 5+ */
    -o-animation-fill-mode: forwards;
    /* Not implemented yet */
    -ms-animation-fill-mode: forwards;
    /* IE 10+ */
    animation-fill-mode: forwards;
    /* When the spec is finished */
    text-transform: none;
    animation: fadeIn ease 0.5s forwards;
    animation-delay: 1s;
    -webkit-animation: fadeIn ease 0.5s forwards;
    -webkit-animation-delay: 1s;
}

.fadeIn-slow {
    opacity: 0;
    -webkit-animation-fill-mode: forwards;
    /* Chrome 16+, Safari 4+ */
    -moz-animation-fill-mode: forwards;
    /* FF 5+ */
    -o-animation-fill-mode: forwards;
    /* Not implemented yet */
    -ms-animation-fill-mode: forwards;
    /* IE 10+ */
    animation-fill-mode: forwards;
    /* When the spec is finished */
    text-transform: none;
    animation: fadeIn ease 1s forwards;
    animation-delay: 1.5s;
    -webkit-animation: fadeIn ease 1s forwards;
    -webkit-animation-delay: 1.5s;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-moz-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-o-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-ms-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

/* .codehilite {
    padding: 1em;
    margin: 1em;
} */

